--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -9,9 +9,11 @@
 </head>
 <body>
   <header>
-    <h1>{{ title }}</h1>
+    <div class="container">
+      <h1>{{ title }}</h1>
+    </div>
   </header>
-  <main>
+  <main class="container">
     {{ content | safe }}
   </main>
 </body>
