--- a/src/index.njk
+++ b/src/index.njk
@@ -1,6 +1,9 @@
 ---
 layout: base.njk
-title: Hello World
+title: Docs
 ---
-
-<p>Welcome to the <a href="https://5t3ph.dev/workshop">Level-Up With Modern CSS Workshop</a>, presented by <a href="https://twitter.com/5t3ph">Stephanie Eckles</a>.</p>
+<ul>
+{% for doc in collections.docs -%}
+  <li><a href="{{ doc.url }}">{{ doc.data.title }}</a></li>
+{% endfor -%}
+</ul>
