--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,8 @@
+@use "theme";
+@use "reset";
+@use "utilities/color";
+@use "utilities/layout";
+
 body {
   background-color: #f9f9f9;
   font-family: system-ui, sans-serif;
