Finished Day 2 - Grid

--- a/src/index.njk
+++ b/src/index.njk
@@ -3,7 +3,14 @@ layout: base.njk
 title: Docs
 ---
 <ul>
-{% for doc in collections.docs -%}
-  <li><a href="{{ doc.url }}">{{ doc.data.title }}</a></li>
+{% for page in collections.docs -%}
+  <li><a href="{{ page.url }}">{{ page.data.title }}</a></li>
 {% endfor -%}
+</ul>
+
+<h2>Templates</h2>
+<ul>
+  {% for page in collections.templates -%}
+    <li><a href="{{ page.url }}">{{ page.data.title }}</a></li>
+  {% endfor -%}
 </ul>
