Finished session three

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -14,7 +14,7 @@
       <h1>{{ title }}</h1>
     </div>
   </header>
-  <main class="container">
+  <main class="container section content">
     {{ content | safe }}
   </main>
 </body>
