--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -42,22 +42,29 @@ html:focus-within {
 /* Set core body defaults */
 body {
   min-height: 100vh;
-  line-height: 1.5;
+  font-family: system-ui, sans-serif;
   text-rendering: optimizeSpeed;
+}
+
+// 🟣 Only update for content flow elements
+p,
+ul:not([class]):not([role]) li,
+ol:not([class]):not([role]) li {
+  line-height: 1.5;
 }
 
 /* A elements that don't have a class get default styles */
 a:not([class]) {
   text-decoration-skip-ink: auto;
   // 🟣 thickness and offset
-  text-decoration-thickness: max(0.03em, 1px);
+  text-decoration-thickness: max(0.08em, 1px);
   text-underline-offset: 0.15em;
 }
 
 /* Make images easier to work with */
 img,
 picture,
-// 🟣
+  // 🟣
 svg {
   display: block;
   max-width: 100%;
@@ -76,7 +83,7 @@ svg {
   scroll-margin-top: 2rem;
 }
 
-/* 🟣 Scroll margin allowance below focused elements 
+/* 🟣 Scroll margin allowance below focused elements
 to ensure they are clearly in view */
 *:focus {
   scroll-margin-bottom: 8vh;
