--- a/src/sass/utilities/_layout.scss
+++ b/src/sass/utilities/_layout.scss
@@ -5,8 +5,17 @@
   margin-left: auto;
 }
 
+section,
+.section {
+  margin-top: 8vh;
+  margin-bottom: 8vh;
+}
+
 .layout-flex {
+  --gap: 2rem;
+  --wrap: wrap;
+
   display: flex;
-  flex-wrap: wrap;
-  gap: 2rem;
+  flex-wrap: var(--wrap);
+  gap: var(--gap);
 }
