Finished session four

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -9,11 +9,16 @@
   <link rel="stylesheet" href="{{ '/css/docs.css' | url }}">
 </head>
 <body>
-  <header>
-    <div class="container">
+  <header class="hero hero--centered background-primary" style="--hero-min-height: 20vh;">
+    <div class="container hero__content">
       <h1>{{ title }}</h1>
+
+      {% if page.fileSlug %}
+        <a href="/">All Docs</a>
+      {% endif %}
     </div>
   </header>
+
   <main class="container section content">
     {{ content | safe }}
   </main>
