--- a/src/sass/utilities/_layout.scss
+++ b/src/sass/utilities/_layout.scss
@@ -19,3 +19,13 @@ section,
   flex-wrap: var(--wrap);
   gap: var(--gap);
 }
+
+.inclusively-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  white-space: nowrap;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+}
