--- a/src/docs/templates/blog.njk
+++ b/src/docs/templates/blog.njk
@@ -3,27 +3,49 @@ title: Blog
 ---
 
 <body class="template-blog">
-  <header class="background-primary">
+  <header class="hero hero--centered background-primary">
+    <div class="hero__content">
     <h1>Blog Headline</h1>
+      <p>Posted on July 9, 2020</p>
+    </div>
   </header>
+
   <main>
     <article>
       <h2>Lorem, ipsum dolor.</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis aperiam ipsa consectetur eius quae autem beatae animi perspiciatis ipsam obcaecati pariatur, nulla doloremque repellendus maiores commodi rem, dignissimos perferendis nisi.</p>
-      <p>Excepturi facere unde est eveniet suscipit distinctio impedit. Incidunt doloribus suscipit ipsa dignissimos ullam corrupti. Porro odio esse, doloribus error consequuntur necessitatibus nemo blanditiis ea numquam, ipsam rem asperiores delectus.</p>
-      <p>Laboriosam at atque aspernatur possimus exercitationem provident! Blanditiis corporis soluta nam, voluptatibus et totam libero doloremque voluptatem earum quas quisquam eius. Provident nesciunt ullam consectetur corporis iusto eum voluptates temporibus.</p>
-      <img src="https://source.unsplash.com/LeG68PrXA6Y/1200x500" alt="">
-      <p>Numquam eius saepe, unde vero voluptatibus culpa libero ea illo exercitationem sequi optio vel, voluptatum ipsum eligendi repudiandae consequatur perferendis fuga. Maiores necessitatibus voluptate consectetur esse ipsa itaque eius porro.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis aperiam ipsa consectetur eius quae autem
+         beatae animi perspiciatis ipsam obcaecati pariatur, nulla doloremque repellendus maiores commodi rem,
+         dignissimos perferendis nisi.</p>
+      <p>Excepturi facere unde est eveniet suscipit distinctio impedit. Incidunt doloribus suscipit ipsa dignissimos
+         ullam corrupti. Porro odio esse, doloribus error consequuntur necessitatibus nemo blanditiis ea numquam,
+         ipsam rem asperiores delectus.</p>
+      <p>Laboriosam at atque aspernatur possimus exercitationem provident! Blanditiis corporis soluta nam,
+         voluptatibus et totam libero doloremque voluptatem earum quas quisquam eius. Provident nesciunt ullam
+         consectetur corporis iusto eum voluptates temporibus.</p>
+      <img class="image image--fullwidth" src="https://source.unsplash.com/LeG68PrXA6Y/1200x500" alt="" width="1200"
+           height="500">
+      <p>Numquam eius saepe, unde vero voluptatibus culpa libero ea illo exercitationem sequi optio vel, voluptatum
+         ipsum eligendi repudiandae consequatur perferendis fuga. Maiores necessitatibus voluptate consectetur esse
+         ipsa itaque eius porro.</p>
       <ul>
         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
         <li>Voluptates nostrum eum eius laborum repellat rerum velit!</li>
         <li>Distinctio enim aliquid fugit cupiditate, eaque facere dolore!</li>
       </ul>
-      <p>Officiis labore, ea nostrum maxime quia sed temporibus eos corporis accusantium architecto incidunt? Nobis fuga consequatur odit enim, tenetur necessitatibus harum in pariatur sint eaque praesentium sequi iste maxime. Magnam?</p>
+      <p>Officiis labore, ea nostrum maxime quia sed temporibus eos corporis accusantium architecto incidunt? Nobis
+         fuga consequatur odit enim, tenetur necessitatibus harum in pariatur sint eaque praesentium sequi iste
+         maxime. Magnam?</p>
+      <img class="image" src="https://source.unsplash.com/cfKwE7k9qqA/400x600" alt="" width="400" height="600">
       <h3>Lorem ipsum dolor sit amet.</h3>
-      <p>Voluptatem modi nobis harum, quia, esse sequi laudantium odit in, officiis dolor doloribus laborum minus! Iure ex, officia laudantium fugiat suscipit animi voluptate earum ad. Dolorum consequuntur aspernatur aliquam dignissimos.</p>
-      <p>Beatae laboriosam quo necessitatibus veniam recusandae inventore magnam esse sit repellat tempora sunt rerum aliquid quia ducimus, laborum quas minima illo culpa provident deleniti nostrum sequi ipsam ratione eaque! Consectetur!</p>
-      <p>Fuga aperiam nihil laudantium vitae perferendis neque dolor officiis ipsam facilis provident commodi natus maxime soluta dolorem culpa nulla qui, consectetur tempora eius doloribus asperiores quo est! Placeat, soluta obcaecati.</p>
+      <p>Voluptatem modi nobis harum, quia, esse sequi laudantium odit in, officiis dolor doloribus laborum minus!
+         Iure ex, officia laudantium fugiat suscipit animi voluptate earum ad. Dolorum consequuntur aspernatur aliquam
+         dignissimos.</p>
+      <p>Beatae laboriosam quo necessitatibus veniam recusandae inventore magnam esse sit repellat tempora sunt rerum
+         aliquid quia ducimus, laborum quas minima illo culpa provident deleniti nostrum sequi ipsam ratione eaque!
+         Consectetur!</p>
+      <p>Fuga aperiam nihil laudantium vitae perferendis neque dolor officiis ipsam facilis provident commodi natus
+         maxime soluta dolorem culpa nulla qui, consectetur tempora eius doloribus asperiores quo est! Placeat, soluta
+         obcaecati.</p>
     </article>
   </main>
 </body>
