--- a/src/docs/colors.njk
+++ b/src/docs/colors.njk
@@ -2,7 +2,7 @@
 title: Colors
 ---
 
-<ul role="list" class="layout-flex">
+<ul role="list" class="layout-grid layout-grid--auto-fit"  style="--gap: 3vw;">
   {% for colorToken in colors %}
     <li>
       <figure class="swatch">
@@ -12,4 +12,22 @@ title: Colors
       </figure>
     </li>
   {% endfor %}
+
+  {% for greyShade in ["medium", "light"] %}
+    <li>
+      <figure class="swatch">
+        <figcaption class="background-grey-{{ greyShade }}">
+          <strong>grey-{{ greyShade }}</strong>
+        </figcaption>
+      </figure>
+    </li>
+  {% endfor %}
+
+  <li>
+    <figure class="swatch">
+      <figcaption class="background-body">
+        <strong>background-body</strong>
+      </figcaption>
+    </figure>
+  </li>
 </ul>
