--- a/src/sass/utilities/_color.scss
+++ b/src/sass/utilities/_color.scss
@@ -14,3 +14,15 @@
     color: var(--color-on-#{$color});
   }
 }
+
+$greys: "medium", "light" !default;
+
+@each $shade in $greys {
+  .background-grey-#{$shade} {
+    background-color: var(--grey-#{$shade});
+
+    @if ($shade == "medium") {
+      color: #fff;
+    }
+  }
+}
